--- a/frontend-coffee-shop/package.json
+++ b/frontend-coffee-shop/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
