--- a/frontend-coffee-shop/package.json
+++ b/frontend-coffee-shop/package.json
@@ -23,10 +23,10 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^15.1.2",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
